# fast_car_api

./: .gitignore  alembic.ini  pyproject.toml
fast_car_api/: app.py  database.py  models.py  routers.py  schemas.py
