[project]
name = "Fast API Car"
version = "0.1.0"
description = "API moderna de carros com FastAPI"
author = [
    {name = "Roberto",email = "robertodev04@gmail.com"}
]

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
lint = 'ruff check'
lint_flix = 'ruff check --fix'
format = 'ruff format'
run = 'fastapi dev fast_car_api/app.py'

